# basketball_simulator

./: .gitignore  fetchers.py  main.py  models.py  predictor.py  protocols.py  pyproject.toml  simulator.py  transition_diagram.mermaid
